# comoresolve

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: check-commit.yml  release.yml
src/comoresolve/: __init__.py
tests/: exemple_index.py
tests/comoresolve/: test_main.py
