[build-system]
requires = ["setuptools>=80.9,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "comoresolve"
version = "0.0.0"
description = "Utilitário para encontrar soluções para problemas no Python"
authors = [
    {name = "Eduardo Klosowski", email = "eduardo_klosowski@yahoo.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Private :: Do Not Upload",
]

[project.urls]
repository = "https://github.com/eduardoklosowski/comoresolve"
releasenotes = "https://github.com/eduardoklosowski/comoresolve/releases"

[project.scripts]
comoresolve = "comoresolve:main"

[dependency-groups]
dev = [
    "validate-pyproject[all]>=0.24,<0.25",
    "isort>=5.10,<6",
    "autopep8>=2.0,<3",
    "flake8>=5.0,<6",
    "mypy>=0.991,<1",
    "bandit>=1.7,<2",
]

[tool.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
line_length = 119
multi_line_output = "HANGING_INDENT"
indent = "    "
float_to_top = true
src_paths = [
    "./src",
]

[tool.autopep8]
recursive = true
aggressive = 3

[tool.mypy]
files = [
    "./src/comoresolve/**/*.py",
]
follow_imports = "normal"
warn_unused_configs = true
show_column_numbers = true
show_error_codes = true
