[build-system]
requires = ["setuptools>=80.9,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "comoresolve"
version = "0.2.0"
description = "Utilitário para encontrar soluções para problemas no Python"
authors = [
    {name = "Eduardo Klosowski", email = "eduardo_klosowski@yahoo.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Typing :: Typed",
]

[project.urls]
repository = "https://github.com/eduardoklosowski/comoresolve"
releasenotes = "https://github.com/eduardoklosowski/comoresolve/releases"

[project.scripts]
comoresolve = "comoresolve:main"

[dependency-groups]
dev = [
    "validate-pyproject[all]>=0.24,<0.25",
    "ruff>=0.14,<0.15",
    "mypy>=1.19,<1.20",
    "pytest>=9.0,<9.1",
    "coverage>=7.12,<7.13",
]

[tool.ruff]
target-version = "py310"
line-length = 119
src = ["src", "tests"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**/test_*.py" = ["S101"]
"tests/exemple_*.py" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.mypy]
warn_unused_configs = true
show_column_numbers = true
show_error_codes = true
sqlite_cache = true
strict = true
plugins = []
files = ["src/**/*.py", "tests/**/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["src/**/__main__.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if (typing\\.)?TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "class .*\\b(typing\\.)?Protocol\\):",
    "if __name__ == '__main__':",
]
